fixing drawing size on mobile and footer sizing

--- a/src/App.css
+++ b/src/App.css
@@ -1,18 +1,42 @@
+*{
+    margin: 0;
+    padding: 0;
+    box-sizing: border-box;
+}
+
+.page_wrapper{
+    max-width: 800px;
+    min-height: 70vh;
+    display: flex;
+    flex-direction:column;
+    gap: 2rem;
+    margin: 0 auto;
+    align-items:center;
+    justify-content: center;
+    margin-top: 1rem;
+}
+
 .instructions_wrapper{
-    min-height: calc(100vh - 35rem);
+    display: flex;
 }
 
 .instructions_container{
     display: flex;
     flex-direction: column;
+    align-items: center;
+    justify-content: center;
+    width: 90%;
+    margin: auto;
     font-family: "Poppins", sans-serif;
     border: 2px solid black;
-    padding: 1rem;
-    margin-top: 5rem;
 }
 
 .instructions_heading{
     font-size: 1.5rem;
+}
+
+.instructions_container ul{
+    padding: .5rem 2rem;
 }
 
 .instructions_container ul li{
@@ -31,4 +55,16 @@
     font-weight: 400;
     width: 50%;
     margin: auto;
+    margin: 2rem 0;
+}
+
+.endGameMessage{
+    font-size: 1.3rem;
+    font-family: "Poppins", sans-serif;
+    font-weight: 400;
+}
+
+.endGameMessage span{
+    font-size: 2rem;
+    font-weight: 600;
 }
