--- a/src/footer.css
+++ b/src/footer.css
@@ -1,6 +1,7 @@
 .footer-container{
-
-    width: 100vw;
+    position: relative;
+    bottom: 0;
+    width: 100%;
     background-color: #3C3C3C;
     color: #c9c9c9;
 
@@ -11,7 +12,7 @@
     justify-content: center;
     gap: 5rem;
     padding: 2rem 0;
-    margin-top: 3rem;
+    margin-top: 5rem;
     font-family: "Poppins", sans-serif;
 }
 
